--- a/interface/情感分析.html
+++ b/interface/情感分析.html
@@ -319,7 +319,7 @@
         </aside>
 
         <main class="main-content-container">
-            <h1 class="report-title">蜜雪冰城社交媒体数据 - 情感分析</h1>
+            <h1 class="report-title">社交媒体数据 - 情感分析</h1>
 
             <div id="error-message" class="error-message"></div>
 
